--- a/ロクシーの淚/ロクシーの淚.md
+++ b/ロクシーの淚/ロクシーの淚.md
@@ -7,3 +7,5 @@ Ust files work as follows:
 > - ロクシーの淚_Lirics.ust as the main part
 > - ロクシーの淚_Middle.ust as the middle part of the hamo.
 > - ロクシーの淚_Low.ust as the low part of the hamo.
+
+My version is [here](http://www.bilibili.com/video/av2947364/)
