--- a/名前のない怪物/名前のない怪物.md
+++ b/名前のない怪物/名前のない怪物.md
@@ -1,7 +1,9 @@
 名前のない怪物
 ====
-Originating by EGOIST (エゴイスト)
+Originating by *EGOIST (エゴイスト)*
 Ust files work as follow :
 > - 名前のない怪物_Lirics.ust as the main part
 > - 名前のない怪物_Hamo.ust as the hamo part.
 > - 名前のない怪物_Rhythm.ust as rhythm part.
+
+My version is [here](http://www.bilibili.com/video/av2893501/)
